@@ -1,3 +1,9 @@
+2001-06-03  Martin Baulig  <baulig@suse.de>
+
+	* gnome-entry-component.[ch]: New files.
+
+	* selector-components.xmldb: New file.
+
 2001-06-01  Martin Baulig  <baulig@suse.de>
 
 	* gnome-image-entry-component.c, gnome-icon-selector-component.c:
